Fix bug for both sides and add gap

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -18,12 +18,12 @@ body {
 
 .left, .right {
   display: flex;
+  gap: 15px;
 
 }
 
 .right {
   margin-left: auto;
-  display: flex;
 }
 
 
